--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <meta name="google-site-verification" content="4U4miU3Gsc0UAXRYGq5Y5ezYuwDvyN93D19iR8COO4E" />
+  <meta name="robots" content="index,fllow">
+<meta name="description" content="NeonCity Hub: Dive into the neon-lit cybersprawl, hack autonomous AI systems, and explore futuristic urban networks in real-time. Code is your only currency in the digital night.">
+
 <title>サイバーパンク風 Chatbot - フルスクリーン対応</title>
+
+
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
 
