--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-
+<meta name="google-site-verification" content="4U4miU3Gsc0UAXRYGq5Y5ezYuwDvyN93D19iR8COO4E" />
   <!-- 基本SEO -->
   <title>無能のホームページ｜何も成し遂げていない人の記録</title>
   <meta name="description" content="何も成し遂げていない無能による無意味なホームページ。特技は先延ばし、実績は特になし。">
